fixed header size on mobile

--- a/src/assets/styles/components-styles/vue-header.scss
+++ b/src/assets/styles/components-styles/vue-header.scss
@@ -12,20 +12,21 @@
   left: 0;
   color: var(--text-gray);
   transform: translateY(-90px);
+  &._active-anim {
+    transition: all 1s linear;
+    transform: translateY(0px);
+  }
   @media (max-width: $mdBreakpoint) {
     height: 80px;
+    transform: translateY(-70px);
   }
   &.nav-up {
-      top: -100px;
+      top: -110px;
       transition: all 0.5s;
   }
   &.nav-down {
       top: 0px;
       transition: all 0.5s;
-  }
-  &._active-anim {
-    transition: all 1s linear;
-    transform: translateY(0px);
   }
   ::-webkit-scrollbar {
     background-color: var(--bg-scrollbar);
