--- a/src/assets/styles/main-wrapper.scss
+++ b/src/assets/styles/main-wrapper.scss
@@ -5,6 +5,9 @@
   display: flex;
   flex-direction: column;
   justify-content: space-between;
+  @media (max-width: $mdBreakpoint) {
+    margin-top: 80px;
+  }
   &__content {
     flex: 1 0 auto;
   }
